Añadida la documentación del controlador autores
